# mof-circular-105-2020

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: code-compliance.yml  compliance.yml  publish.yml  test.yml
mof_circular_105_2020/: __init__.py  main.py  term.py
tests/: test_parse_tin.py
